fix(theme-default): fix long inlinecode breaks the layout

--- a/packages/@vuepress/theme-default/src/client/styles/code.scss
+++ b/packages/@vuepress/theme-default/src/client/styles/code.scss
@@ -131,6 +131,7 @@ pre[class*='language-'] {
     font-size: 0.85em;
     background-color: rgba(27, 31, 35, 0.05);
     border-radius: 3px;
+    overflow-wrap: break-word;
   }
 }
 
